use-case3-mod-req-headers/fixit/shop-whatigot-fixed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop
  template:
    metadata:
      labels:
        app: shop
    spec:
      containers:
      - name: shop
        image: nginx
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx
          readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: shop-config
---
apiVersion: v1
kind: Service
metadata:
  name: shop
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: shop
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shop-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shop-httproute
spec:
  parentRefs:
  - name: shop-gateway
    sectionName: http
  hostnames:
  - "whatigot.lab.f5npi.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /cart
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: Cache-Control
          value: no-cache
        add:
        - name: Accept-Encoding
          value: compress
        - name: Content-Type
          value: application/json
        remove:
        - X-Apply-Discount
    backendRefs:
    - name: shop
      port: 80
